# Games

./: README.md  g2048.py  main.py  pyproject.toml  utils.py
src/: main.py  utils.py
src/games/: g2048.py  pong.py  tictactoe.py
